--- a/TensorFlowBasics.ipynb
+++ b/TensorFlowBasics.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPrSXqcIsnZ6Yh1LM3vGIrs",
+      "authorship_tag": "ABX9TyNVtyOjiPUpTAMfUggil0jQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -59,6 +59,24 @@
         "\n",
         "\n",
         "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "TlU-ODjRRKbb"
+      },
+      "source": [
+        "# prerequisite\n",
+        "\n",
+        "Before proceeding with the tutorial , Hope you have some basic experience on python and Jupyter Notebook -Colab usage.\n",
+        "\n",
+        "\n",
+        "**Colab & Jupyter Notebooks:**\n",
+        "\n",
+        "Colab - Colab is a short form of Google Colaboratory tool . It is a online tool for running Jupyter notebooks. It is free tool for all developers to create amazing ML models.\n",
+        "\n",
+        "Jupyter Notebook- It is a special document format , which allows developer to add test , graphs along with the code. This helps to visualize the ML progress in any stages of development ."
       ]
     },
     {
