--- a/TensorFlowBasics.ipynb
+++ b/TensorFlowBasics.ipynb
@@ -76,7 +76,7 @@
         "\n",
         "Colab - Colab is a short form of Google Colaboratory tool . It is a online tool for running Jupyter notebooks. It is free tool for all developers to create amazing ML models.\n",
         "\n",
-        "Jupyter Notebook- It is a special document format , which allows developer to add test , graphs along with the code. This helps to visualize the ML progress in any stages of development ."
+        "Jupyter Notebook- It is a special document format , which allows developer to add text , graphs along with the code. This helps to visualize the ML progress in any stages of development ."
       ]
     },
     {
